# Vuln-Agent-X

./: .env.example  .gitignore  README.en.md  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
rules/semgrep/: vulnagentx-rules.yml
scripts/: evaluate.py  run_ablation.py  run_experiment.py
src/vulnagentx/: __init__.py
src/vulnagentx/adapters/: __init__.py  sandbox_adapter.py  semgrep_adapter.py  treesitter_adapter.py
src/vulnagentx/adapters/llm/: __init__.py  base.py  factory.py  local_adapter.py  mock_adapter.py  openai_adapter.py
src/vulnagentx/agents/: __init__.py  base.py  logic_bug_agent.py  router_agent.py  sceptic_agent.py  security_agent.py  semantic_agent.py
src/vulnagentx/app/: __init__.py  api.py  cli.py  schemas.py
src/vulnagentx/core/: __init__.py  context_expansion.py  evidence_fusion.py  scheduler.py  screening.py  state.py  verification.py  workflow.py
src/vulnagentx/datasets/: __init__.py  base.py  bigvul.py  devign.py  jit.py  primevul.py
src/vulnagentx/eval/: __init__.py  ablations.py  detection_metrics.py  efficiency_metrics.py  localization_metrics.py
src/vulnagentx/retrieval/: __init__.py  repo_graph.py
src/vulnagentx/utils/: __init__.py  config.py
tests/: test_agents.py  test_end_to_end.py  test_research_modules.py
